# tempera

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  PROGRESS.md  README.md  build.rs  default_config.toml  mcp-config.json
.github/workflows/: release.yml
docs/: INSTALL.md  memrl-capture.md  memrl-claude-code-architecture.md  memrl-feedback.md  memrl-recall.md  memrl-setup.sh
hooks/: post-session.sh  pre-task.sh
npm/: .gitignore  README.md  package.json
npm/scripts/: install.js
scripts/: build-npm-package.sh  package-release.ps1  package-release.sh  prepare-binaries.sh
src/: capture.rs  config.rs  episode.rs  feedback.rs  indexer.rs  llm.rs  main.rs  mcp_server.rs  retrieve.rs  stats.rs  store.rs  utility.rs
src/mcp/: helpers.rs  mod.rs  protocol.rs  tools.rs
src/mcp/handlers/: capture.rs  feedback.rs  mod.rs  propagate.rs  retrieve.rs  review.rs  stats.rs  status.rs
